[tool.poetry]
name = "kubernetes-mcp"
version = "0.1.0"
description = "MCP server for Kubernetes observability with Prometheus, Jaeger, Neo4j, logs, and controlled shell tools."
authors = ["Emre Unlu"]
readme = "README.md"
packages = [
  { include = "app" },
  { include = "clients" },
  { include = "services" },
  { include = "tools" },
  { include = "utils" },
  { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = ">=2.0.0"
kubernetes = ">=30.1.0"
requests = ">=2.32.0"
neo4j = ">=5.28.0"
python-dotenv = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.6.0"
mypy = ">=1.10.0"

[tool.poetry.scripts]
kubernetes-mcp = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"